update docker config for vps

--- a/deploy/vps/Dockerfile
+++ b/deploy/vps/Dockerfile
@@ -2,28 +2,34 @@
 FROM node:20-slim AS base
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
-# 1. Install dependencies
-FROM base AS deps
-WORKDIR /app
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/web/package.json ./apps/web/
-COPY packages/ui/package.json ./packages/ui/
-COPY packages/core/package.json ./packages/core/
-COPY packages/editor/package.json ./packages/editor/
-COPY packages/db/package.json ./packages/db/
-RUN pnpm install --frozen-lockfile
-
-# 2. Build the project
+# 1. Builder stage
 FROM base AS builder
 WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+
+# Install build dependencies
+RUN apt-get update && apt-get install -y \
+    python3 \
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy all files for installation and build
+# (pnpm workspaces require all package.json files to be present)
 COPY . .
-# We need to set build-time env vars if any (none for now that are required)
+
+# Set build-time arguments
+ARG NEXT_PUBLIC_APP_URL
+ARG NEXT_PUBLIC_ALLOW_REGISTRATION
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+ENV NEXT_PUBLIC_ALLOW_REGISTRATION=$NEXT_PUBLIC_ALLOW_REGISTRATION
+
+# Install dependencies and build
+RUN pnpm install
 RUN pnpm run build
 
-# 3. Production image
+# 2. Production image
 FROM base AS runner
 WORKDIR /app
 
@@ -33,16 +39,14 @@ ENV NODE_ENV=production
 RUN groupadd --system --gid 1001 nodejs
 RUN useradd --system --uid 1001 nextjs
 
-# Copy necessary files
+# Copy necessary files from builder
 COPY --from=builder /app/apps/web/public ./apps/web/public
 COPY --from=builder /app/apps/web/.next ./apps/web/.next
 COPY --from=builder /app/apps/web/package.json ./apps/web/package.json
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
-
-# Copy packages as they are needed at runtime
 COPY --from=builder /app/packages ./packages
-COPY deploy/vps/start.sh ./start.sh
+COPY --from=builder /app/deploy/vps/start.sh ./start.sh
 
 # Set permissions for uploads and start script
 RUN mkdir -p apps/web/public/uploads && \
