--- a/deploy/vps/env.example
+++ b/deploy/vps/env.example
@@ -1,15 +1,26 @@
-# --- Security ---
-# Generate a secret using: openssl rand -base64 32
-AUTH_SECRET=your_auth_secret_here
-
-# --- App Settings ---
-NEXT_PUBLIC_APP_URL=http://your-vps-ip-or-domain:3000
-ALLOW_REGISTRATION=false
-
-# --- Initial Admin User (for PRIVATE mode) ---
-INITIAL_USERS='[{"name": "Admin", "email": "admin@example.com", "password": "change_me_immediately", "role": "ADMIN"}]'
-
-# --- Database (internal for docker-compose) ---
-# You don't usually need to change this if using the provided docker-compose.yml
+# Database Configuration
 DATABASE_URL=postgresql://senlo_user:senlo_password@db:5432/senlo_db
 
+# Authentication
+# Generate a secret using: openssl rand -base64 32
+AUTH_SECRET="YOUR_AUTH_SECRET_HERE"
+
+# Required for VPS deployment to trust the host IP/Domain
+AUTH_TRUST_HOST=true
+
+# Registration Control
+# Set to "false" to disable public registration.
+ALLOW_REGISTRATION="true"
+
+# Application URL
+# Replace with your server's IP or domain (including port if not 80/443)
+# Example: http://95.213.11.22:3000
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# Initial Admin Users (for PRIVATE mode or first run)
+# Format: '[{"name": "Admin", "email": "admin@example.com", "password": "secure_password", "role": "ADMIN"}]'
+INITIAL_USERS='[]'
+
+# Email Provider Configuration
+# RESEND_API_KEY="re_..."
+# MAILGUN_API_KEY="mg_..."
